--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </div>
       
           <div class="col-md-6">
-              <div class="position-relative d-flex align-items-center " data-aos="zoom-in">
+              <div class="position-relative d-flex align-items-center " >
                 <img src="images/hero-one.png" class="img-fluid">
                 <img src="images/hero2.png" class="img-fluid priceing">
               </div>
@@ -92,7 +92,7 @@
       </div>
 
 </section>
-<section class="product" data-aos="zoom-in">
+<section class="product" >
     <div class="container-fluid position-relative">
         <div class="row ">
       <h3 class="title mx-auto text-center pb-5">product categories</h3>
@@ -205,7 +205,7 @@
     <div class="container-fluid">
         <div class="row g-2 bg-light">
             <div class="col-lg-4 col-md-6">
-                <div class="product-card-red" data-aos="zoom-in"> 
+                <div class="product-card-red" > 
                     <div class="inrboder">  
                           <div class="row g-5 inrrow align-items-center">
 
@@ -234,7 +234,7 @@
             </div>
     
             <div class="col-lg-4 col-md-6">
-                <div class="product-card-gray" data-aos="zoom-in"> 
+                <div class="product-card-gray" > 
                     <div class="inrboder">  
                           <div class="row g-5 inrrow align-items-center">
 
@@ -264,7 +264,7 @@
 
 
             <div class="col-lg-4 col-md-6">
-                <div class="product-card-red" data-aos="zoom-in"> 
+                <div class="product-card-red" > 
                     <div class="inrboder">  
                           <div class="row g-5 inrrow align-items-center">
 
@@ -294,7 +294,7 @@
 
 
             <div class="col-lg-6 col-md-6">
-                <div class="product-card-red" data-aos="zoom-in"> 
+                <div class="product-card-red" > 
                     <div class="inrboder">  
                           <div class="row g-5 inrrow align-items-center">
 
@@ -322,7 +322,7 @@
 
             </div>
             <div class="col-lg-6 col-md-6">
-                <div class="product-card-gray" data-aos="zoom-in"> 
+                <div class="product-card-gray" > 
                     <div class="inrboder">  
                           <div class="row g-5 inrrow align-items-center">
 
@@ -353,7 +353,7 @@
         </div>
       </div>
 </section>
-<section class="service" data-aos="zoom-in">
+<section class="service" >
     <div class="container">
         <h3 class="title mx-auto text-center pb-5">Papco Business Services</h3>
         <div class="row gx-4 gy-5">
